[package]
name = "gravity-loop"
version = "0.1.0"
edition = "2024"

# For faster compile times in dev, given by the bevy docs
[profile.dev.package."*"]
opt-level = 3

[dependencies]
bevy = { version = "0.16", features = ["dynamic_linking"] }
avian3d = { version = "0.3", default-features = false, features = [
  "3d",
  "f64",
  "parry-f64",
] }
nalgebra = "0.33.2"
